<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_voice_to_sign"
            android:icon="@drawable/ic_menu_voice_to_sign"
            android:title="@string/menu_voice_to_sign" />
        <item
            android:id="@+id/nav_sign_to_voice"
            android:icon="@drawable/ic_menu_sign_to_voice"
            android:title="@string/menu_sign_to_voice" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_choose_dialect"
                android:icon="@drawable/ic_menu_choose_dialect"
                android:title="@string/menu_language" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
